--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="assets/CVFINI2025.pdf" target="_blank">/// CV.PDF</a>
         </nav>
 
-        <h1>DJOULITA SCHYDLOWSKY : ACCÈS NÉON</h1>
+        <h1>DJOULITA SCHYDLOWSKY : Accès Autorisé </h1>
         
         <div class="data-console">
             <h3>:: STATUS :: [ BTS SIO SLAM // ONLINE ]</h3>
@@ -53,4 +53,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
